--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==24.4.2
 click==8.1.7
 Django==3.2.25
 django-allauth==0.63.2
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-extensions==3.2.3
 pathspec==0.12.1
