--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-cloudinary-storage==0.3.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-extensions==3.2.3
+gunicorn==20.1.0
 pathspec==0.12.1
 pillow==10.3.0
 psycopg2==2.9.9
@@ -16,3 +17,4 @@ python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.5.0
 stripe==9.10.0
+whitenoise==5.3.0
